--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   animate_do: ^1.7.2
   image_picker: ^0.6.7+4
   mime_type: ^0.3.2
-  jiffy: ^3.0.1
   toast: ^0.1.5
   rxdart: ^0.24.1
   shared_preferences: ^0.5.8
@@ -44,6 +43,8 @@ dependencies:
   jwt_decoder: ^1.0.3
   flutter_bloc: ^6.0.1
   bloc: ^6.0.1
+  cloudinary_sdk: ^1.0.1+2
+  # cloudinary_public: ^0.6.2
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/no-image.png
+    - assets/jar-loading.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
