--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,10 @@ dependencies:
   shared_preferences: ^0.5.8
   date_field: ^0.3.0
   sk_onboarding_screen: ^1.0.1
-
   http: ^0.12.2
   jwt_decoder: ^1.0.3
   cloudinary_sdk: ^1.0.1+2
-  # cloudinary_public: ^0.6.2
+  badges: ^1.1.4
 
 dev_dependencies:
   flutter_test:
