--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   jwt_decoder: ^1.0.3
   cloudinary_sdk: ^1.0.1+2
   badges: ^1.1.4
+  flutter_open_whatsapp: ^0.1.2
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_test:
