--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   animate_do: ^1.7.2
   image_picker: ^0.6.7+4
+  image_cropper: ^1.3.1
   mime_type: ^0.3.2
   toast: ^0.1.5
   rxdart: ^0.24.1
