--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   animate_do: ^1.7.2
   image_picker: ^0.6.7+4
   image_cropper: ^1.3.1
-  mime_type: ^0.3.2
+  mime_type: 
   toast: ^0.1.5
   rxdart: ^0.24.1
   shared_preferences: ^0.5.8
@@ -42,7 +42,6 @@ dependencies:
   sk_onboarding_screen: ^1.0.1
   http: ^0.12.2
   jwt_decoder: ^1.0.3
-  cloudinary_sdk: ^1.0.1+2
   badges: ^1.1.4
   flutter_open_whatsapp: ^0.1.2
   flutter_masked_text: ^0.8.0
