--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,22 @@ dependencies:
   http: ^0.12.2
   jwt_decoder: ^1.0.3
   badges: ^1.1.4
-  flutter_open_whatsapp: ^0.1.2
+  # flutter_open_whatsapp:
   flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  flutter_launcher_icons:
+
+flutter_icons:
+  ios: true
+  android: "launcher_icon"
+  image_path: "assets/icon/fetachi-icons.png"
+  adaptive_icon_background: "assets/icon/fetachi-icons.png"
+  adaptive_icon_foreground: "assets/icon/fetachi-icons.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -63,6 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/icon/
     - assets/img/
     - assets/no-image.png
     - assets/jar-loading.gif
