--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   badges: ^1.1.4
   # flutter_open_whatsapp:
   flutter_masked_text: ^0.8.0
+  mask_text_input_formatter: ^1.2.1
 
 dev_dependencies:
   flutter_test:
