--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_open_whatsapp: ^0.1.2
   flutter_masked_text: ^0.8.0
   mask_text_input_formatter: ^1.2.1
+  dart_rut_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
