--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
         applicationId "com.jorgepino.fetachiappmovil"
         minSdkVersion 20
         targetSdkVersion 29
-        versionCode 2
+        versionCode 4
         versionName "1.1.2"
     }
 
@@ -63,6 +63,9 @@ android {
    buildTypes {
        release {
            signingConfig signingConfigs.release
+            minifyEnabled true
+            useProguard true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
 
